# MiniProject

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  render.yaml  requirements.txt  run_server.py
api/: main.py
app/: dashboard.py
data/raw/: crime_incidents.csv
scripts/: generate_sample_data.py  start_app.py  train_model.py
src/crime_risk/: __init__.py  config.py  data.py  model.py  pipeline.py
src/crime_risk_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_api.py  test_model.py  test_pipeline.py
web/: api-config.js  dashboard.html  evaluation.html  forecast.html  hotspots.html  index.html  temporal.html
